tests/fixtures/invalid/min_str_list.py
# Cannot call min() with Str, List[int]
x = min("hello", [1, 2, 3])
